--- a/13form.html
+++ b/13form.html
@@ -8,7 +8,8 @@
 <body>
   <!-- 渲染資料區 -->
   <div id="app">
-
+   <input type="text" v-on:input="inputCount++">
+   <p>文字方塊異動次數:{{inputCount}}</p>
   </div>
 
   <!-- VUE's CDN -->
@@ -18,7 +19,7 @@
     const app = Vue.createApp({
       data() {
         return {
-          
+          inputCount: 0
         }
       }
     })
